[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/player-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/death.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/sfx_sounds_fanfare3.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sfx_exp_shortest_soft2.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "cannon_shot"
length = 0.6
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -360.0, 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.32
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.91223, 6.94704 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3.99907, 7.01286 )

[sub_resource type="ParticlesMaterial" id=8]
resource_local_to_scene = true
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 4.123, 5.625, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.45
scale_random = 0.41
color = Color( 1, 0.372549, 0.25098, 1 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = -6.28319
texture = ExtResource( 1 )
hframes = 6
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cannon_shot = SubResource( 1 )
anims/down = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jumping = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="CannonCollisonDetector" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CannonCollisonDetector"]
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="DeathParticles" type="Particles2D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
randomness = 0.73
local_coords = false
process_material = SubResource( 8 )

[node name="CannonMovementTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -7.37

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.732

[node name="CannonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -8.598
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="CannonMovementTimer" to="." method="_on_CannonMovementTimer_timeout"]
